preparando para deploy

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "start": "node ./dist/src/server.js",
+    "build": "tsc",
     "dev": "nodemon src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
